Upload songs added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ springdoc.swagger-ui.path=/swagger
 
 app.jwt.secret=revplay_super_secret_key_please_change_1234567890
 app.jwt.expiration-ms=3600000
+
+
+app.storage.audio-dir=uploads/audio
+app.storage.image-dir=uploads/images
+
+//good for larger uploads
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=60MB
